--- a/frontend/sites/impressum.html
+++ b/frontend/sites/impressum.html
@@ -31,6 +31,10 @@ crossorigin="anonymous"referrerpolicy="no-referrer" />
         <div class="fas fa-shopping-cart" id="card-btn"></div>
         <div class="fas fa-bar" id="menu-btn"></div>
     </div>
+    <div class="search-form">
+        <input type="search" id="search-box" placeholder="Suche">
+        <label for="search-box" class="fas fa-search"></label>
+    </div>
 
 </header>
 
