--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fun4Fan</title>
+<!--font awesome cdn link-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!--css file-->
+<link rel="stylesheet" href="frontend/res/css/style.css">
+<!--js file-->
+<script src="frontend/js/script.js"></script>
 </head>
 <body>
+<!--Header Section-->
+<header class="header">
+    <a href="#" class="logo">
+        <img src="frontend/res/img/test.jpg" alt="">
+    </a>
+    <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#menu">menu</a>
+        <a href="#review">review</a>
+        <a href="#contact">contact</a>
+    </nav>
+    <div class="icons">
+        <i class="fas fa-search" id="search-btn"></i>
+        <i class="fas fa-shopping-cart" id="card-btn"></i>
+        <i class="fas fa-bars" id="menu-btn"></i>
+    </div>
+    <div class="search-form">
+        <input type="search" id="search-box" placeholder="Suche">
+        <label for="search-box" class="fas fa-search"></label>
+    </div>
+
+</header>
+
     
 </body>
 </html>
