--- a/frontend/sites/Login.html
+++ b/frontend/sites/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun4Fan</title>
+    <title>LogIn</title>
 <!--font awesome cdn link-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
 integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
@@ -22,7 +22,7 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--css file-->
-<link rel="stylesheet" href="frontend/res/css/style.css">
+<link rel="stylesheet" href="../res/css/style.css">
 <!--js file-->
 <script src="frontend/js/script.js"></script>
 </head>
@@ -33,10 +33,10 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
         <img src="frontend/res/img/test.jpg" alt="">
     </a>
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="../webentwicklung-1/frontend/sites/Login.html">about</a>
+        <a href="../../index.html">home</a>
+        <a href="#about">about</a>
         <a href="#shop">shop</a>
-        <a href="../webentwicklung-1/frontend/sites/konto.html">review</a>
+        <a href="#review">review</a>
         <a href="#contact">contact</a>
     </nav>
     <div class="icons">
@@ -52,6 +52,36 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
     </div>
 
 </header>
+<br>
+<br>
+<br>
+<br>
+<h1>LogIn</h1>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Du hast schon ein Konto?</h5>
+      <p class="card-text"><fieldset>
+        <form action="../databaselogic/selectuser.php" method="POST">
+            <label for="email">E-Mail-Adresse</label><br>
+            <input class="form-control" required type="email" name="email" placeholder="E-Mail-Adresse" ><br>
+            <label for="pword1">Passwort</label><br>
+            <input type="password" id="pword1" name="pword1" /> <br><br>
+        </form>
+    </fieldset></p>
+      <a href="#" class="btn btn-primary">Anmelden</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Du bist noch nicht registriert?</h5>
+      <p class="card-text">
+        Übersicht über deine Bestellungen
+        Deine Wunschliste auf allen Geräten
+        Schnellerer, simpler Checkout
+    </p>
+      <a href="reg.html" class="btn btn-primary">Jetzt registrieren</a>
+    </div>
+  </div>
 
     
 </body>
