--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="../webentwicklung-1/frontend/sites/Login.html">about</a>
-        <a href="#shop">shop</a>
+        <a href="#shop">shop-test</a>
         <a href="../webentwicklung-1/frontend/sites/konto.html">review</a>
         <a href="#contact">contact</a>
     </nav>
