--- a/frontend/sites/Login.html
+++ b/frontend/sites/Login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LogIn</title>
 <!--font awesome cdn link-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
 integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
@@ -21,10 +22,9 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--css file-->
-<link rel="stylesheet" href="frontend/res/css/style.css">
+<link rel="stylesheet" href="../res/css/style.css">
 <!--js file-->
 <script src="frontend/js/script.js"></script>
-<title>LogIn</title>
 </head>
 <body>
 <!--Header Section-->
@@ -34,9 +34,9 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
     </a>
     <nav class="navbar">
         <a href="../webentwicklung-1/index.html">home</a>
-        <a href="../webentwicklung-1/frontend/sites/Login.html">about</a>
+        <a href="Login.html">about</a>
         <a href="#shop">shop</a>
-        <a href="../webentwicklung-1/frontend/sites/konto.html">review</a>
+        <a href="konto.html">review</a>
         <a href="#contact">contact</a>
     </nav>
     <div class="icons">
