--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
 integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
 crossorigin="anonymous" referrerpolicy="no-referrer" />
-<!--Bootstrap cdn link-->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" 
-integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-K6uIw7i6H6I4o1mg05f7fZu0sp6/i7v9U+nhXQIR3I=" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" 
 integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
- integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--css file-->
 <link rel="stylesheet" href="frontend/res/css/style.css">
 <!--js file-->
 <script src="frontend/js/script.js"></script>
 </head>
+
 <body>
 <!--Header Section-->
 <header class="header">
@@ -33,14 +34,16 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
         <img src="frontend/res/img/test.jpg" alt="">
     </a>
     <nav class="navbar">
-        <a href="../webentwicklung-1/index.html">home</a>
-        <a href="../webentwicklung-1/frontend/sites/Login.html">about</a>
+        <a href="../webentwicklung-1">home</a>
+        <a href="#about">about</a>
         <a href="#shop">shop</a>
-        <a href="../webentwicklung-1/frontend/sites/konto.html">review</a>
+        <a href="#review">review</a>
         <a href="#contact">contact</a>
     </nav>
     <div class="icons">
-        <i class="fa-solid fa-user" id="konto-btn"></i>
+        <a href="../webentwicklung-1/frontend/pages/Login.html">
+            <i class="fa-solid fa-user" id="konto-btn"></i>
+        </a>
         <i class="fa-solid fa-heart" id="wish-btn"></i>
         <i class="fas fa-shopping-cart" id="card-btn"></i>
         <i class="fas fa-search" id="search-btn"></i>
