include head/footer

--- a/frontend/pages/rechnung.html
+++ b/frontend/pages/rechnung.html
@@ -38,5 +38,12 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
     <div id="rechnungsprodukte"></div>
     <br>
     <h2 id="total">Gesamtsumme: </h2>
+     <!-- Footer Section -->
+ <footer class="footer py-4 bg-dark text-white">
+  <div class="container text-center">
+      <p>&copy; 2024 Fun4Fans. Alle Rechte vorbehalten.</p>
+      <p><a href="impressum.php" class="text-white">Impressum</a> | <a href="datenschutz.php" class="text-white">Datenschutz</a></p>
+  </div>
+</footer>
 </body>
 </html>
